<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_cpp</name>
  <version>0.1.0</version>
  <description>ROS 2 IMU Publisher for ADIS16460</description>
  <maintainer email="gerald.ebmer@tuwien.ac.at">Gerald Ebmer</maintainer>
  <license>Apache-2.0</license>

  <!-- Build Tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for ROS2 Node -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>wiringpi</depend>
  <depend>concurrentqueue</depend>


  <!-- Launch file support -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <!-- Testing & Linting -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
